[metadata]
name = pump-wallet-tool
version = 0.1.0
description = Pump.fun wallet monitor, market collector, and behavior analyst.

[options]
py_modules =
    pump_tool
packages =
    pump_monitor
    pump_analyst
python_requires = >=3.9
install_requires =
    requests>=2.31.0
    urllib3<2
include_package_data = True

[options.package_data]
pump_analyst =
    analyze_entry&exit_conditions.py

[options.entry_points]
console_scripts =
    pump-tool = pump_tool:main
